feat: add support to env vars with dotenv and custom script

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "config": "node ./config/set-env.config.js",
+    "start": "npm run config -- --environment=dev && ng serve",
     "start:railway": "node server.js",
-    "build": "ng build",
+    "build": "npm run config -- --environment=prod && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -44,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.3.1",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^8.8.0",
@@ -59,6 +61,7 @@
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "yargs": "^17.7.2"
   }
 }
