--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:railway": "node server.js",
     "build": "npm run config -- --environment=prod && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
     "lint": "ng lint"
   },
   "private": true,
@@ -39,7 +40,7 @@
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
     "@types/google.maps": "^3.53.6",
-    "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.6.2",
     "@types/sockjs-client": "^1.5.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
@@ -52,16 +53,19 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
     "express": "^4.18.2",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.4",
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3",
     "yargs": "^17.7.2"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jest.ts"
+    ],
+    "globalSetup": "jest-preset-angular/global-setup"
   }
 }
